finished LibraryActivity UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">CookHelper</string>
     <string name="searchBtnTxt">Search Recipe</string>
     <string name="browseAddBtnTxt">Browse/Add Recipe</string>
+    <string name="deleteBtnTxt">Delete</string>
+    <string name="editBtnTxt">Edit</string>
+    <string name="cancelBtnTxt">Cancel</string>
 </resources>
