basic Recipe view finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="deleteBtnTxt">Delete</string>
     <string name="editBtnTxt">Edit</string>
     <string name="cancelBtnTxt">Cancel</string>
+    <string name="nameLabelTxt">Name:</string>
+    <string name="editRecipeTxt">Edit</string>
 </resources>
