can now edit name field & save the associated recipe with the edit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="cancelBtnTxt">Cancel</string>
     <string name="nameLabelTxt">Name:</string>
     <string name="editRecipeTxt">Edit</string>
+    <string name="okBtnTxt">OK</string>
+    <string name="cancelRecipeBtnTxt">Cancel</string>
 </resources>
