--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="okBtnTxt">OK</string>
     <string name="cancelRecipeBtnTxt">Cancel</string>
     <string name="minutesTxt">min.</string>
+    <string name="recipeListBtnTxt">Recipe List</string>
 </resources>
