made good progress on SearchActivity...
    * currently, the SearchActivity ListView displays all recipes.
      this will change in the future to only show search results
    * otherwise, can now select a recipe in that list and display it
    * can also edit the recipe, and go all the way back to MainActivity
      with persistent state
    * hence, in all current functions, the state of any edited recipes
      is preserved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cancelRecipeBtnTxt">Cancel</string>
     <string name="minutesTxt">min.</string>
     <string name="recipeListBtnTxt">Recipe List</string>
+    <string name="goSearchBtnTxt">Search</string>
 </resources>
